--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 numpy>=1.24.0
 opencv-python>=4.8.0
 ultralytics>=8.3.0
+mediapipe>=0.9.0
+matplotlib>=3.7.0
+certifi>=2024.6.0
+fastapi>=0.1.0
+uvicorn>=0.34.0
